# rgdb

./: .gitignore  .rgdb_history  Cargo.toml  README.md  main.c
doc/: rgdb.md  tasks.md
src/: debugger.rs  hello.rs  main.rs  target_bin.rs
